# hevc_parser

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  utils.rs
src/hevc/: config.rs  context.rs  hrd_parameters.rs  hvcc.rs  mod.rs  pps.rs  profile_tier_level.rs  scaling_list_data.rs  sei.rs  short_term_rps.rs  slice.rs  sps.rs  vps.rs  vui_parameters.rs
src/io/: mod.rs  processor.rs
