[package]
name = "hevc_parser"
version = "0.6.9"
authors = ["quietvoid"]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
description = "HEVC format parser, incomplete"
repository = "https://github.com/quietvoid/hevc_parser"

[dependencies]
nom = "8.0.0"
bitvec_helpers = { version = "4.0.0", default-features = false, features = ["bitstream-io"] }
anyhow = "1.0.98"
regex = { version = "1.11.1", optional = true }

# Matroska support
matroska-demuxer = { version = "0.7.0", optional = true }

[features]
hevc_io = ["dep:regex", "dep:matroska-demuxer"]
